New posts 2025 11 1 10 (#2)
* Add Java 9+ Module System comprehensive guide with examples and blog post

- New project: blog-post-examples/java/2025-11-08-java9-module-system/
- 5 example classes demonstrating module system concepts:
  * BasicModuleExample: Module fundamentals and introspection
  * ModuleDependenciesExample: Dependency management (requires directives)
  * ModuleExportsExample: Package exports and strong encapsulation
  * ModuleReflectionExample: Module API and runtime inspection
  * EncapsulationExample: Reflection control and module security
- 69 unit tests with @DisplayName (BDD style)
- Complete README with comprehensive documentation
- Blog post (802 lines) covering:
  * Module system overview and problems solved
  * Five detailed examples with code and tests
  * Output from running each example
  * Key insights and practical patterns
  * Use cases and best practices
  * Reference materials and running instructions

All tests passing, full build successful.
* Restructure Java 9 Module System blog post into two logical parts

- Part 1: How modules work (encapsulation, dependencies, reflection)
- Part 2: Module API and runtime introspection

Reorganizes narrative flow for clarity:
- Examples 1-3 demonstrate fundamental concepts without API
- Examples 4-5 demonstrate Module API capabilities
- Adds clear visual separation with section headers
- Maintains all examples, tests, outputs, and key insights

This addresses user feedback to separate 'how it works' from 'how to use API'
* Enhance Java 17 Sealed Classes blog post with design philosophy section

- Add new section: "Design Philosophy: Why Sealed Controls Only Direct Children"
- Explain Collections Framework problem and design decisions
- Add 3 practical design patterns with working examples:
  * Pattern 1: Full Control Chain (sealed → sealed → final)
  * Pattern 2: Breaking the Chain (sealed → non-sealed → open)
  * Pattern 3: Final Leaf Nodes (sealed → final)

New code examples:
- DesignPhilos